--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   "author": "cafe4it@gmail.com",
   "license": "MIT",
   "devDependencies": {
-    "fuse-box": "^2.2.1"
+    "babel-core": "^6.25.0",
+    "babel-preset-es2015": "^6.24.1",
+    "fuse-box": "^2.2.1",
+    "typescript": "^2.4.2"
   }
 }
