--- a/package.json
+++ b/package.json
@@ -4,14 +4,17 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node fuse default",
+    "dist": "node fuse dist"
   },
   "author": "cafe4it@gmail.com",
   "license": "MIT",
   "devDependencies": {
     "babel-core": "^6.25.0",
     "babel-preset-es2015": "^6.24.1",
+    "fs": "^0.0.1-security",
     "fuse-box": "^2.2.1",
-    "typescript": "^2.4.2"
+    "typescript": "^2.4.2",
+    "uglify-es": "^3.0.27"
   }
 }
