--- a/package.json
+++ b/package.json
@@ -4,16 +4,19 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node fuse default",
-    "dist": "node fuse dist"
+    "start": "NODE_ENV=development node dev-env/fuse default",
+    "dist": "NODE_ENV=production node dev-env/fuse default"
   },
   "author": "cafe4it@gmail.com",
   "license": "MIT",
   "devDependencies": {
     "babel-core": "^6.25.0",
     "babel-preset-es2015": "^6.24.1",
+    "cli-color": "^1.2.0",
     "fs": "^0.0.1-security",
+    "fs-extra": "^4.0.1",
     "fuse-box": "^2.2.1",
+    "path": "^0.12.7",
     "typescript": "^2.4.2",
     "uglify-es": "^3.0.27"
   }
